--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body, h1, h2, p {
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('../images/background.jpg');
+    background-image: url('../images/backgroun.jpg');
     background-size: cover;
     background-position: center;
     color: #fff;
