--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Reset some default styles */
+Reset some default styles */
 body, h1, h2, p {
     margin: 0;
     padding: 0;
@@ -6,7 +6,7 @@ body, h1, h2, p {
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('../images/backgroun.jpg');
+    background-image: url('https://previews.123rf.com/images/ivook/ivook1307/ivook130700024/20979285-xxl-doodle-icons-set-no.4-for-every-occasion-in-black-and-white.-small-hand-drawn-illustrations-are-isolated-(group)-on-background-.jpg');
     background-size: cover;
     background-position: center;
     color: #fff;
@@ -114,4 +114,4 @@ section.active {
     border-radius: 8px;
 }
 
-/* ... (previous styles) */
+/* ... (previous styles)
